src/index.css
#root {
  transform: translateX(8px);
}

/* For Chrome, Edge, and Safari */
::-webkit-scrollbar {
  width: 1.125rem;
  /* width of the entire scrollbar */
}

::-webkit-scrollbar-track {
  background: #242424;
  /* color of the tracking area */
}

::-webkit-scrollbar-thumb {
  background-color: #494949;
  /* color of the scrollbar itself */
  border-radius: 9px;
  border: 7px solid transparent;
  background-clip: content-box;
  /* Prevents the background from bleeding into the border */
}

.scrolling ::-webkit-scrollbar-thumb {
  background-color: #858585;
  /* color of the scrollbar itself */
}

/* For Firefox */
html {
  scrollbar-width: thin;
  /* "auto" or "thin" */
  scrollbar-color: #bb99ff #242424;
  /* thumb and track color */
  overflow-y: scroll;
}

input,
button,
h1,
h2,
h3,
p {
  margin: 0.5rem;
}

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: #ffffff;
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 3px solid transparent;
  padding: 0.5rem;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #4c396e;
  color: #ffffff;
  cursor: pointer;
  transition:
    border-color 0.25s,
    background-color 0.25s;
  line-height: 0;
  min-height: 38px;
}

button#fifth-edition-char {
  background-color: #bf5d5d;
}

button:hover {
  border-color: #bb99ff;
}

button:active {
  background-color: #8447ff;
}

.react-grid-layout {
  background-color: #5f5f5f;
  border: 5px solid transparent;
  border-radius: 8px;
}

.react-grid-layout .react-grid-item {
  display: flex;
  align-items: center;
  justify-content: center;
  border: 2px solid #ba98ff;
  background-color: #3a3a3a;
  border-radius: 4px;
  padding: 0.25rem;
  margin-top: -5px;
  margin-left: -5px;
}

.react-grid-item > .react-resizable-handle::after {
  border-right: 2px solid #bb99ff;
  border-bottom: 2px solid #bb99ff;
}

.react-grid-layout .react-grid-item #deleteWidget {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  top: 1px;
  right: 1px;
  cursor: pointer;
}

.react-grid-layout .react-grid-item #deleteWidget img {
  width: 15px;
  height: 15px;
}

#lockedDash .react-grid-layout .react-grid-item #deleteWidget {
  display: none;
}

.react-grid-layout .react-grid-item#addWidget > .react-resizable-handle::after {
  display: none;
}

.react-grid-layout .react-grid-item#addWidget > .react-resizable-handle {
  display: none;
}

.editableMDWidget {
  padding: 0;
}

.editableMDWidget span,
.editableMDWidget strong,
.editableMDWidget em {
  color: #ffffff;
}

.editableMDWidget code span,
.editableMDWidget code strong,
.editableMDWidget code em {
  color: #000000;
}

.editableMDWidget blockquote {
  font-weight: 500;
  font-style: italic;
  border-left: 3px solid #8447ff;
  margin-top: 1.6em;
  margin-bottom: 1.6em;
  margin-left: 0.5em;
  padding-left: 1em;
}

.editableMDWidget h1 + p:has(br),
.editableMDWidget h2 + p:has(br),
.editableMDWidget h3 + p:has(br),
.editableMDWidget h4 + p:has(br),
.editableMDWidget h5 + p:has(br),
.editableMDWidget h6 + p:has(br),
.editableMDWidget ul + p:has(br) {
  display: none;
}

.editableMDWidget li[role="checkbox"] {
  text-decoration: none;
}

.editableMDWidget li[role="checkbox"]::before {
  top: 3px;
}

.editableMDWidget li[role="checkbox"]::after {
  top: 6px;
}

.editableMDWidget ul {
  color: #FFFFFF
}

.react-grid-layout .react-grid-item#addWidget {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #4c2696;
  transition: background-color 0.25s;
}

.react-grid-layout .react-grid-item#addWidget:hover {
  background-color: #2b194f;
}

.react-grid-layout .react-grid-item#addWidget:active {
  background-color: #8447ff;
}

.react-grid-layout .react-grid-item#addWidget img {
  transform: rotate(45deg);
  width: 20px;
  height: 20px;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #000000;
    background-color: #d2bff9;
  }

  button {
    background-color: #9d73f1;
    color: #000000;
  }

  button.iconButton {
    background-color: #4c2696;
  }

  button:hover {
    border-color: #8447ff;
  }

  ::-webkit-scrollbar-track {
    background: #d2bff9;
  }

  ::-webkit-scrollbar-thumb {
    background-color: #d5c1ff;
  }

  .scrolling ::-webkit-scrollbar-thumb {
    background-color: #9773e4;
  }

  .react-grid-layout {
    background-color: #9773e4;
  }

  .react-grid-layout .react-grid-item {
    background-color: #ffffff;
  }

  .react-grid-item > .react-resizable-handle::after {
    border-right: 2px solid #bb99ff;
    border-bottom: 2px solid #bb99ff;
  }

  .react-grid-layout .react-grid-item {
    border: 2px solid #8447ff;
  }

  .editableMDWidget span,
  .editableMDWidget strong,
  .editableMDWidget em {
    color: #000000;
  }

  .editableMDWidget code span,
  .editableMDWidget code strong,
  .editableMDWidget code em {
    color: #000000;
  }

  .editableMDWidget ul {
    color: #000000
  }
}

